// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="1"
      >
        Default text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="2"
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="1"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="2"
    >
      This is a fieldnote.
    </div>
  </div>
</div>
`;

exports[`<TextField /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline text-field__overline--disabled"
    >
      <label
        class="label"
        for="5"
      >
        Disabled text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="6"
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        disabled=""
        id="5"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--disabled"
      id="6"
    >
      This TextField is disabled
    </div>
  </div>
</div>
`;

exports[`<TextField /> DisabledVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="45"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="46"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="45"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="46"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="47"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="48"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="47"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="48"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="49"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="49"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="51"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="51"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="54"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="53"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="54"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="56"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="55"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="56"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="57"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="59"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="3"
      >
        Error text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="4"
        aria-invalid="true"
        class="input-field error"
        data-bootstrap-override="inputfield"
        id="3"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--error"
      id="4"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
        />
      </svg>
      This is a fieldnote with an error.
    </div>
  </div>
</div>
`;

exports[`<TextField /> ErrorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="29"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="30"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="29"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="30"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="31"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="32"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="31"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="32"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="33"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="33"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="35"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="35"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="38"
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="37"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="38"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="40"
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="39"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="40"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="41"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="43"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> InputWithin story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="11"
      >
        Input field with button inside
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="11"
        type="text"
      />
      <div
        class="text-field__input-within"
      >
        <button
          class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand button button--icon"
          data-bootstrap-override="clickable-style-icon"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> LabelFieldnoteVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="13"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="14"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="13"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="14"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="15"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="16"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="15"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="16"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="17"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="17"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="19"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="19"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="22"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="21"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="22"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="24"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="23"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="24"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="25"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="27"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline text-field__overline--no-label"
    >
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="10"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="9"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="10"
    >
      This text field has no visible label
    </div>
  </div>
</div>
`;

exports[`<TextField /> Required story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="7"
      >
        Text field with fieldNote
         
      </label>
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="8"
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="7"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="8"
    >
      This is a fieldnote for a required text field.
    </div>
  </div>
</div>
`;

exports[`<TextField /> RequiredVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="61"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="62"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="61"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="62"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="63"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="64"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="63"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="64"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="65"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="65"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="67"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="67"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="70"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="69"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="70"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="72"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="71"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="72"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="73"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="75"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, label, isError
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="77"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="78"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="77"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="78"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="79"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="80"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="79"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="80"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      fieldNote, label, disabled
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="81"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="82"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="81"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="82"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="83"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="84"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="83"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="84"
      >
        fieldNote text
      </div>
    </div>
  </div>
</div>
`;
